--- a/Mission2/cadre3.html
+++ b/Mission2/cadre3.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-    <h1>TP CAUSSE Nelson</h1>
-   <h2> <a href="TP2/index.html">TP2 </a>
-   <br> <a href="TP3/index.html">TP3 </a>
-   <br> <a href="TP4/index.html">TP4</a>
-   <br> <a href="Mission2/index.html">Mission2</a></h2>
+<body bgcolor="22C3D6">
+    <h1> <center>Page principale:</h1>
 </body>
 </html>
