--- a/Mission2/index.html
+++ b/Mission2/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TP CAUSSE Nelson</h1>
-   <h2> <a href="TP2/index.html">TP2 </a>
-   <br> <a href="TP3/index.html">TP3 </a>
-   <br> <a href="TP4/index.html">TP4</a>
-   <br> <a href="Mission2/index.html">Mission2</a></h2>
+    <iframe src="cadre3.html" height="200" width="100%"></iframe>
+    <iframe src="cadre1.html" name="f1"  height="800" width="30%" ></iframe> 
+    <iframe src="cadre2.html" name="f2"  height="800" width="65%" ></iframe>
 </body>
 </html>
