--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <br> <a href="TP3/index.html">TP3 </a>
    <br> <a href="TP4/index.html">TP4</a>
    <br> <a href="Mission2/index.html">Mission2</a>
-   <br> <a href="TP5/index.html">TP5</a></h2>
+   <br> <a href="TP5/index.html">TP5</a>
+   <br> <a href="TP6/index.html">TP6</a></h2>
 </body>
 </html>
