--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    <br> <a href="Mission2/index.html">Mission2</a>
    <br> <a href="TP5/index.html">TP5</a>
    <br> <a href="TP6/index.html">TP6</a>
-   <br> <a href="Mission 3/mission3.html">Mission3</a></h2>
+   <br> <a href="Mission 3/mission3.html">Mission3</a>
+   <br> <a href="TP7.1/index.html">TP7.1</a>
+   <br> <a href="TP7.2/index2.html">TP7.2</a></h2>
 </body>
 </html>
