--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <br> <a href="TP6/index.html">TP6</a>
    <br> <a href="Mission 3/mission3.html">Mission3</a>
    <br> <a href="TP7.1/index.html">TP7.1</a>
-   <br> <a href="TP7.2/index2.html">TP7.2</a></h2>
+   <br> <a href="TP7.2/index2.html">TP7.2</a>
+   <br> <a href="TP8/index.html">TP8</a></h2>
 </body>
 </html>
