--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <br> <a href="TP7.1/index.html">TP7.1</a>
    <br> <a href="TP7.2/index2.html">TP7.2</a>
    <br> <a href="TP8/index.html">TP8</a>
-   <br> <a href="mission4/Mission 4 - Les environnements d’exploitation.pdf">Mission4</a></h2>
+   <br> <a href="mission4/Mission 4 - Les environnements d’exploitation.pdf">Mission4</a>
+   <br> <a href="TP9/calculatrice.html">TP9</a></h2>
 </body>
 </html>
