--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    <br> <a href="TP7.2/index2.html">TP7.2</a>
    <br> <a href="TP8/index.html">TP8</a>
    <br> <a href="mission4/Mission 4 - Les environnements d’exploitation.pdf">Mission4</a>
-   <br> <a href="TP9/calculatrice.html">TP9</a></h2>
+   <br> <a href="TP9/calculatrice.html">TP9</a>
+   <br> <a href="TP10/calculatrice.html">TP10</a></h2>
 </body>
 </html>
