--- a/mission 6/menu.html
+++ b/mission 6/menu.html
@@ -36,6 +36,32 @@
                     <li><a href="#">Exercices</a></li>
                 </ul>
             </li>
+            
+            <li class="menu-Base"><a href="#">Base de donné</a>
+                <ul class="submenu">
+
+                </ul>
+            </li>
+            <li class="menu-PHP"><a href="#">PHP</a>
+                <ul class="submenu">
+
+                </ul>
+            </li>
+            <li class="menu-Mission"><a href="#">Mission</a>
+                <ul class="submenu">
+                    <li> <a href="Mission2/index.html">Mission2</a></li>
+                    <li><a href="Mission 3/mission3.html">Mission3</a></li>
+                    <li><a href="mission4/Mission 4 - Les environnements d’exploitation.pdf">Mission4</a></li>
+                    <li><a href="mission 5/cv.html">Mission5</a></li>
+                    <li><a href="mission 6/menu.html">Mission6</a></li>
+
+                </ul>
+            </li>
+            <li class="menu-Certification"><a href="#">Certification</a>
+                <ul class="submenu">
+
+                </ul>
+            </li>
             <li class="menu-contact"><a href="#">Contact</a></li>
         </ul>
     </nav>
