--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
    <br> <a href="mission 5/cv.html">Mission5</a>
    <br> <a href="TP11/index.html">TP11</a>
    <br> <a href="TP12/index.html">TP12</a>
-   <br> <a href="mission 6/menu.html">Mission6</a></h2>
+   <br> <a href="mission 6/menu.html">Mission6</a>
+   <br> <a href="TP13/index.html">TP13</a></h2>
 </body>
 </html>
