--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
    <br> <a href="mission 6/menu.html">Mission6</a>
    <br> <a href="TP13/index.html">TP13</a>
    <br> <a href="TP14/index.html">TP14</a>
-   <br> <a href="TP15/index.html">TP15</a></h2>
+   <br> <a href="TP15/index.html">TP15</a>
+   <br> <a href="Certificat_rgpd1.pdf">certif rgpd 1</a>
+   <br> <a href="Attestation_de_suivi rgpd.pdf">certif rgpd 2</a>
+   <br> <a href="Certificat_rgpd 3.pdf">certif rgpd 3</a>
+   <br> <a href="Certificat_rgpd 4.pdf">certif rgpd 4</a></h2>
 </body>
 </html>
