--- a/TP14/index.html
+++ b/TP14/index.html
@@ -14,5 +14,7 @@
     <button onclick="seconnecter()">Se connecter</button>
     <button onclick="cdc()">Cdc</button>
     <button onclick="seconnecter2()">Se connecter 2</button>
+    <button onclick="seconnecter3()">Se connecter 3</button>
+    <button onclick="addLigne()">Ajouter ligne</button>
 </body>
 </html>
