--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li><a href="mission4/Mission 4 - Les environnements d’exploitation.pdf">Mission4</a></li>
                     <li><a href="mission 5/cv.html">Mission5</a></li>
                     <li><a href="mission 6/menu.html">Mission6</a></li>
+                    <li><a href="Mission9/index.html">Mission9</a></li>
 
                 </ul>
             </li>
@@ -67,7 +68,6 @@
                     <li><a href="Certificat_rgpd 4.pdf">RGPD 4</a></li>
                     <li><a href="Certificat_rgpd 5.pdf">RGPD 5</a></li>
                     <li> <a href="Attestation_de_suivi rgpd 6.pdf">RGPD 6</a></li>
-                    <li><a href="Mission 3/mission3.html">Mission3</a></li>
                     <li><a href="Attestation MOOC d'ANSSI.pdf">MOOC d'ANSSI</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>                    
