--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     <li><a href="mission 5/cv.html">Mission5</a></li>
                     <li><a href="mission 6/menu.html">Mission6</a></li>
                     <li><a href="Mission9/index.html">Mission9</a></li>
+                    <li><a href="mission10/index.html">Mission10</a></li>
+                    <li><a href="mission11/html.html">Mission11</a></li>
 
                 </ul>
             </li>
